# project_ladder

./: .env  data.json  db.sqlite3  manage.py  payload_bet.json  pyproject.toml
home/: admin.py  apps.py  bet.py  bolsa_apostas.py  consumers.py  headers.json  login_bolsa_apostas.py  models.py  routing.py  schemas.py  tasks.py  urls.py  utils.py  views.py
home/api/: routers.py  routers_data.py  schemas.py
home/api/__pycache__/: routers.cpython-313.pyc:Zone.Identifier
home/auth_bolsa/: auth_manager.py  login_bolsa_apostas.py
home/auth_bolsa/contracts/: auth_interface.py  headers_interface.py  tokens_interface.py
home/bets/: bet.py  bets_manager.py
home/bets/contracts/: bet_interface.py
home/ladder/: ladder_manager.py
home/migrations/: 0001_initial.py  0002_delete_apostamodel.py  0002_sessionsbolsaapostamodel_device_token.py  0003_alter_sessionsbolsaapostamodel_authorization_and_more.py  0003_flowmodel.py  0004_betmodel_delete_closingbetmodel_delete_flowmodel_and_more.py  0004_matchupmodel.py  0005_alter_matchupmodel_away_score_and_more.py  0006_remove_matchupmodel_away_score_and_more.py  0007_sessionsbolsaapostamodel.py  0008_flowmodel_event_id_flowmodel_market_id.py  0009_remove_openingbetmodel_closer_and_more.py
home/schemas/: bet_schemas.py  schemas_bolsa_login.py
home/states/: closed.py  manager_states.py  matched.py  waiting.py
home/states/bet_states/: closed.py  manager_states.py  matched.py  waiting.py
home/static/css/: event.css  home.css  ladder.css  markets.css
home/static/css/v2/: home.css
home/static/js/: event.js  home.js  home2.js  ladder.js  testerequest.js
home/static/js/v2/: home.js
home/templates/: event.html  home.html  home2.html  ladder.html  markets.html
home/templates/v2/: home.html
home/templatetags/: pool_extras.py
ladder_server/: __init__.py  api.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
microservices/api/: api.py
microservices/bolsa/: interface.py
microservices/utils/: event.py  formulas.py  functions.py  matchup.py  testando.py
static/css/: base.css
static_root/css/: home2.css
static_root/js/: home.js  home2.js
templates/: exception.html
templates/base/: base.html
